# ocrized-text-dataset

./: Dockerfile  License.txt  Taskfile.yml  datasheet.md  pyproject.toml  readme.md  requirements.txt  rvl-cdip.sh  setup.sh  to_text.py  tobacco3482.sh
