[tool.poetry]
name = "ocrized-text-dataset"
version = "0.1.0"
description = ""
authors = ["Nicolas Audebert <nicolas.audebert@quicksign.com>"]

[tool.poetry.dependencies]
python = ">=3.5"
pytesseract = "^0.2.6"
tqdm = "^4.31"
joblib = "^0.13.2"
Pillow = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
